--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,22 @@
 body {
   font-family: Arial, sans-serif;
+  margin: 15px;
   width: 400px;
 }
 
+h1 {
+  font-size: 1.5em;
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-top: 10px;
+}
+
 textarea {
+  display: block;
   width: 100%;
   height: 100px;
   resize: none;
-}
-
-button {
-  width: 100%;
-  margin-top: 10px;
 }
