Update to 1.5, finishing touches. Project is golden and fully functional, next updates is features only

--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,22 @@ body {
   font-family: Arial, sans-serif;
   margin: 15px;
   width: 400px;
+  background-color: #1e1e1e;
 }
 
 h1 {
   font-size: 1.5em;
-  margin-bottom: 15px;
+  color: white;
+}
+
+h3 {
+  color: white;
 }
 
 label {
   display: block;
   margin-top: 10px;
+  color: white;
 }
 
 textarea {
@@ -19,4 +25,48 @@ textarea {
   width: 100%;
   height: 100px;
   resize: none;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+}
+
+.button {
+  display: flex;
+  margin: 5% auto;
+  flex-direction: column;
+  align-items: center;
+  padding: 6px 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+  border-radius: 6px;
+  border: none;
+
+  background: #6e6d70;
+  box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1), inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5), 0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
+  color: #dfdedf;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button:focus {
+  box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2), 0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+  outline: 0;
 }
